@@ -1,9 +1,10 @@
 2012-2-x
+INCOMPATIBLE CHANGE: renamed cicada_learn_block_mpi to cicada_learn_online_kbest_mpi and use the block-wise algorithms for cicada_learn_online_mpi
 Bugfix: Adde brevity penalty for RIBES
 Bugfix: Do not read oracles when learning by xBLEU
 New: added permute-deterministic which deterministically permute hyperedges wrt the category of the head.
 New: added filter for alignment: Currently, we support inverse, permutation
-New: added xBLEU to cicada_learn_block_mpi
+New: added xBLEU to cicada_learn_online_kbest_mpi
 New: support the latest sparse hash (moved from google to sparsehash) and gperftools (renamed from google-perftools)
 
 2012-2-15
